# skypro

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-test.yml
docs/: README.md
src/skypro/: __init__.py  main.py
src/skypro/cli_utils/: cli_utils.py
src/skypro/commands/: prepare.py  validate.py
src/skypro/commands/report/: README.md  flow_calcs.py  main.py  microgrid_flow_calcs.py  plots.py  rates.py  readings.py  time.py  warnings.py
src/skypro/commands/report/config/: config.py
src/skypro/commands/simulator/: README.md  algorithm.py  cartesian.py  main.py  microgrid.py  normalise_data.py  output.py  parse_imbalance_data.py  profiler.py  read_data.py  results.py  utils.py
src/skypro/commands/simulator/algorithms/: approach.py  microgrid.py  peak.py  rate_management.py  system_state.py  utils.py
src/skypro/commands/simulator/config/: __init__.py  config.py  config_common.py  config_v3.py  config_v4.py  curve.py  dayed_period.py  parse_config.py  path_field.py  utility.py
src/skypro/common/cli_utils/: cli_utils.py  cliutils.py
src/skypro/common/config/: bill_match.py  data_source.py  data_source_csv.py  data_source_flows.py  dayed_period.py  path_field.py  rates_dataclasses.py  rates_parse_db.py  rates_parse_yaml.py  utility.py
src/skypro/common/data/: get_bess_readings.py  get_meter_readings.py  get_plot_meter_readings.py  get_profile.py  get_timeseries.py  utility.py
src/skypro/common/microgrid_analysis/: bill_match.py  breakdown.py  costs_by_group.py  daily_gains.py  output.py
src/skypro/common/notice/: notice.py
src/skypro/common/rate_utils/: to_dfs.py
src/skypro/common/rates/: README.md  bill_match.py  microgrid.py  peripheral.py  rates.py  supply_point.py  time_varying_value.py
src/skypro/common/timeutils/: __init__.py  clock_time_period.py  dayed_period.py  days.py  math_wallclock.py  settlement_periods.py  timeutils.py
src/skypro/reporting_webapp/: README.md  main.py
src/tests/: __init__.py
src/tests/integration/: test_integration.py  test_integration_reporting.py  test_integration_simulator.py
src/tests/integration/fixtures/: config.json  config.yaml  env.json  simulation_config.yaml
src/tests/integration/fixtures/rates/: dno_fees_wpd_export.json  fixed_market_rates.yaml  supply_fees_bryt_import.json  supply_fees_import.json  supply_fees_statkraft_export.json
(+31 files in other folders)
