[tool.poetry]
name = "skypro"
version = "0.6.2"
description = "Skyprospector command line tool by Cepro"
authors = ["damonrand <damon@cepro.energy>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
plotly = "^5.21.0"
marshmallow = "^3.21.1"
marshmallow-dataclass = "^8.6.1"
simt-common = {version = "^1.2.1", source = "testpypi"}

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple//"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skypro = "skypro.main:main"