[tool.poetry]
name = "skypro"
version = "0.15.0"
description = "Skyprospector command line tool by Cepro"
authors = ["damonrand <damon@cepro.energy>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
plotly = "^5.21.0"
marshmallow = "^3.21.3"
marshmallow-dataclass = "^8.7.0"
pyyaml = "^6.0.1"
tabulate = "^0.9.0"
ruff = "^0.5.6"
pulp = "^2.9.0"
pendulum = "^3.0.0"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"
simt-common = {version = "^13.1.0", source = "testpypi"}

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple//"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skypro = "skypro.main:main"
test = "tests:run_tests"
lint = "tests:run_linter"
